--- a/css/styles.css
+++ b/css/styles.css
@@ -26,12 +26,23 @@ Colors:
 - Headings text - black #161223
 - Body text - dark gray #53575a
 - Buttons, icons - green #7dc22b
+
+- main-color: #028B89
+- second-color: #035256
+- third-color: #002B32
 ******************************************/
 
 
 /**************************/
 /*     General Styles     */
 /**************************/
+:root{
+	--backgroud: #f7f9fd;
+	--heading-text: #002B32;
+	--body-text: #53575a;
+	--buttons-icons: #028B89;
+}
+
 body,
 html {
     width: 100%;
@@ -39,12 +50,12 @@ html {
 }
 
 body, p {
-	color: #53575a; 
+	color: var(--body-text); 
 	font: 400 1rem/1.625rem "Open Sans", sans-serif;
 }
 
 h1 {
-	color: #161223;
+	color: var(--heading-text);
 	font-weight: 600;
 	font-size: 2.5rem;
 	line-height: 3.25rem;
@@ -52,7 +63,7 @@ h1 {
 }
 
 h2 {
-	color: #161223;
+	color: var(--heading-text);
 	font-weight: 600;
 	font-size: 2rem;
 	line-height: 2.5rem;
@@ -60,7 +71,7 @@ h2 {
 }
 
 h3 {
-	color: #161223;
+	color: var(--heading-text);
 	font-weight: 600;
 	font-size: 1.75rem;
 	line-height: 2.25rem;
@@ -68,7 +79,7 @@ h3 {
 }
 
 h4 {
-	color: #161223;
+	color: var(--heading-text);
 	font-weight: 600;
 	font-size: 1.5rem;
 	line-height: 2rem;
@@ -76,7 +87,7 @@ h4 {
 }
 
 h5 {
-	color: #161223;
+	color: var(--heading-text);
 	font-weight: 600;
 	font-size: 1.25rem;
 	line-height: 1.625rem;
@@ -84,7 +95,7 @@ h5 {
 }
 
 h6 {
-	color: #161223;
+	color: var(--heading-text);
 	font-weight: 600;
 	font-size: 1rem;
 	line-height: 1.375rem;
@@ -117,12 +128,12 @@ h6 {
 }
 
 a {
-	color: #53575a;
+	color: var(--body-text);
 	text-decoration: underline;
 }
 
 a:hover {
-	color: #53575a;
+	color: var(--body-text);
 	text-decoration: underline;
 }
 
@@ -147,7 +158,7 @@ a:hover {
 }
 
 .green {
-	color: #7dc22b;
+	color: var(--buttons-icons);
 }
 
 .bg-gray {
@@ -157,9 +168,9 @@ a:hover {
 .btn-solid-reg {
 	display: inline-block;
 	padding: 1.375rem 2.25rem 1.375rem 2.25rem;
-	border: 1px solid #7dc22b;
+	border: 1px solid var(--buttons-icons);
 	border-radius: 4px;
-	background-color: #7dc22b;
+	background-color: var(--buttons-icons);
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -170,16 +181,16 @@ a:hover {
 
 .btn-solid-reg:hover {
 	background-color: transparent;
-	color: #7dc22b; /* needs to stay here because of the color property of a tag */
+	color: var(--buttons-icons); /* needs to stay here because of the color property of a tag */
 	text-decoration: none;
 }
 
 .btn-solid-lg {
 	display: inline-block;
 	padding: 1.625rem 2.625rem 1.625rem 2.625rem;
-	border: 1px solid #7dc22b;
+	border: 1px solid var(--buttons-icons);
 	border-radius: 4px;
-	background-color: #7dc22b;
+	background-color: var(--buttons-icons);
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -190,17 +201,17 @@ a:hover {
 
 .btn-solid-lg:hover {
 	background-color: transparent;
-	color: #7dc22b; /* needs to stay here because of the color property of a tag */
+	color: var(--buttons-icons); /* needs to stay here because of the color property of a tag */
 	text-decoration: none;
 }
 
 .btn-outline-reg {
 	display: inline-block;
 	padding: 1.375rem 2.25rem 1.375rem 2.25rem;
-	border: 1px solid #161223;
+	border: 1px solid var(--heading-text);
 	border-radius: 4px;
 	background-color: transparent;
-	color: #161223;
+	color: var(--heading-text);
 	font-weight: 600;
 	font-size: 0.875rem;
 	line-height: 0;
@@ -209,7 +220,7 @@ a:hover {
 }
 
 .btn-outline-reg:hover {
-	background-color: #161223;
+	background-color: #b4a9d8;
 	color: #ffffff;
 	text-decoration: none;
 }
@@ -217,10 +228,10 @@ a:hover {
 .btn-outline-lg {
 	display: inline-block;
 	padding: 1.625rem 2.625rem 1.625rem 2.625rem;
-	border: 1px solid #161223;
+	border: 1px solid var(--heading-text);
 	border-radius: 4px;
 	background-color: transparent;
-	color: #161223;
+	color: var(--heading-text);
 	font-weight: 600;
 	font-size: 0.875rem;
 	line-height: 0;
@@ -229,7 +240,7 @@ a:hover {
 }
 
 .btn-outline-lg:hover {
-	background-color: #161223;
+	background-color: var(--heading-text);
 	color: #ffffff;
 	text-decoration: none;
 }
@@ -237,10 +248,10 @@ a:hover {
 .btn-outline-sm {
 	display: inline-block;
 	padding: 1rem 1.5rem 1rem 1.5rem;
-	border: 1px solid #161223;
+	border: 1px solid var(--heading-text);
 	border-radius: 4px;
 	background-color: transparent;
-	color: #161223;
+	color: var(--heading-text);
 	font-weight: 600;
 	font-size: 0.875rem;
 	line-height: 0;
@@ -249,7 +260,7 @@ a:hover {
 }
 
 .btn-outline-sm:hover {
-	background-color: #161223;
+	background-color: var(--heading-text);
 	color: #ffffff;
 	text-decoration: none;
 }
@@ -293,9 +304,9 @@ a:hover {
 	display: inline-block;
 	width: 100%;
 	height: 3.25rem;
-	border: 1px solid #7dc22b;
+	border: 1px solid var(--buttons-icons);
 	border-radius: 4px;
-	background-color: #7dc22b;
+	background-color: var(--buttons-icons);
 	color: #ffffff;
 	font-weight: 600;
 	font-size: 0.875rem;
@@ -305,9 +316,9 @@ a:hover {
 }
 
 .form-control-submit-button:hover {
-	border: 1px solid #7dc22b;
+	border: 1px solid var(--buttons-icons);
 	background-color: transparent;
-	color: #7dc22b;
+	color: var(--buttons-icons);
 }
 
 
@@ -315,7 +326,7 @@ a:hover {
 /*     Navigation     */
 /**********************/
 .navbar {
-	background-color: #161223;
+	background-color: var(--heading-text);
 	font-weight: 600;
 	font-size: 0.875rem;
 	line-height: 0.875rem;
@@ -328,8 +339,8 @@ a:hover {
 }
 
 .navbar .logo-image img {
-    width: 100px;
-	height: 32px;
+    /*width: 100px;*/
+	height: 100px;
 }
 
 .navbar .logo-text {
@@ -350,7 +361,7 @@ a:hover {
 	padding-left: 1rem;
 	overflow-y: auto;
 	visibility: hidden;
-	background-color: #161223;
+	background-color: var(--heading-text);
 	transition: visibility .3s ease-in-out, -webkit-transform .3s ease-in-out;
 	transition: transform .3s ease-in-out, visibility .3s ease-in-out;
 	transition: transform .3s ease-in-out, visibility .3s ease-in-out, -webkit-transform .3s ease-in-out;
@@ -378,7 +389,7 @@ a:hover {
 .navbar .nav-item.dropdown.show .nav-link,
 .navbar .nav-item .nav-link:hover,
 .navbar .nav-item .nav-link.active {
-	color: #7dc22b;
+	color: var(--buttons-icons);
 }
 
 /* Dropdown Menu */
@@ -400,7 +411,7 @@ a:hover {
 	margin-top: 0.25rem;
 	margin-bottom: 0.25rem;
 	border: none;
-	background-color: #161223;
+	background-color: var(--heading-text);
 }
 
 .navbar .dropdown-item {
@@ -414,8 +425,8 @@ a:hover {
 }
 
 .navbar .dropdown-item:hover {
-	background-color: #161223;
-	color: #7dc22b;
+	background-color: var(--heading-text);
+	color: var(--buttons-icons);
 }
 
 .navbar .dropdown-divider {
@@ -434,7 +445,7 @@ a:hover {
 }
 
 .navbar .fa-stack-2x {
-	color: #7dc22b;
+	color: var(--buttons-icons);
 	transition: all 0.2s ease;
 }
 
@@ -448,7 +459,7 @@ a:hover {
 }
 
 .navbar .fa-stack:hover .fa-stack-1x {
-	color: #7dc22b;
+	color: var(--buttons-icons);
 }
 
 .navbar .navbar-toggler {
@@ -527,7 +538,7 @@ a:hover {
 	margin-bottom: 2rem;
 	margin-left: auto;
 	border-radius: 50%;
-	background-color: #7dc22b;
+	background-color: var(--buttons-icons);
 	text-align: center;
 }
 
@@ -656,14 +667,14 @@ a:hover {
 	padding: 0.125rem 0.875rem;
 	border: none;
 	background-color: #ffffff;
-	color: #53575a;
+	color: var(--body-text);
 	font-weight: 600;
 	font-size: 0.875rem;
 }
 
 .filter .button:hover,
 .filter .button.is-checked {
-	background-color: #7dc22b;
+	background-color: var(--buttons-icons);
 	color: #ffffff;
 }
 
@@ -743,7 +754,7 @@ a:hover {
 
 .slider-1 .testimonial-author {
 	margin-bottom: 0.25rem;
-	color: #161223;
+	color: var(--heading-text);
 }
 
 .slider-1 .text-decoration {
@@ -787,7 +798,7 @@ a:hover {
 }
 
 .form-1 .list-unstyled .fas {
-	color: #7dc22b;
+	color: var(--buttons-icons);
 }
 
 .form-1 .form-control-input,
@@ -818,14 +829,14 @@ a:hover {
 
 .counter .purecounter {
 	margin-bottom: 1.5rem;
-	color: #7dc22b;
+	color: var(--buttons-icons);
 	font-weight: 600;
 	font-size: 5rem;
 	line-height: 3rem;
 }
 
 .counter .counter-info {
-	color: #161223;
+	color: var(--heading-text);
 	font-size: 0.875rem;
 	line-height: 1.5rem;
 }
@@ -837,7 +848,7 @@ a:hover {
 .footer {
 	padding-top: 6.5rem;
 	padding-bottom: 2rem;
-	background-color: #161223;
+	background-color: var(--heading-text);
 }
 
 .footer a {
@@ -881,7 +892,7 @@ a:hover {
 }
 
 .footer .footer-col.third .fa-stack:hover .fa-stack-2x {
-    color: #7dc22b;
+    color: var(--buttons-icons);
 }
 
 .footer .footer-col.third .fa-stack:hover .fa-stack-1x {
@@ -894,7 +905,7 @@ a:hover {
 /*********************/
 .copyright {
 	padding-bottom: 1rem;
-	background-color: #161223;
+	background-color: var(--heading-text);
 	text-align: center;
 }
 
@@ -940,7 +951,7 @@ a:hover {
 .ex-header {
 	padding-top: 8.5rem;
 	padding-bottom: 4rem;
-	background-color: #161223;
+	background-color: var(--heading-text);
 }
 
 .ex-header h1 {
@@ -972,7 +983,7 @@ a:hover {
 }
 
 .ex-cards-1 .card .fa-stack-2x {
-	color: #7dc22b;
+	color: var(--buttons-icons);
 }
 
 .ex-cards-1 .card .fa-stack-1x {
@@ -1067,7 +1078,7 @@ a:hover {
 	.navbar.top-nav-collapse {
 		padding-top: 0.5rem;
 		padding-bottom: 0.5rem;
-		background-color: #161223;
+		background-color: var(--heading-text);
 		box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.025);
 	}
 
