--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,12 @@
 
 /*****************************************
 Table Of Contents:
-- Variables
 - Custom Fonts
+- Variables
 - General Styles
 - Navigation
 - Header
+------------------- Index -----------------
 - Introduction
 - Details
 - Services 1
@@ -19,19 +20,23 @@ Table Of Contents:
 - Copyright
 - Back To Top Button
 - Extra Pages
+----------------- Nosotros ----------------
+- Misión y visión
+- Experience
+----------------- Contacto ----------------
+- Frase
+- Contactform
+-------------------------------------------
+- Social Media
 - Media Queries
 ******************************************/
 
 /*****************************************
 Colors:
-- Backgrounds - light gray #f7f9fd
-- Headings text - black #161223
-- Body text - dark gray #53575a
-- Buttons, icons - green #7dc22b
-
 - main-color: #028B89
 - second-color: #035256
 - third-color: #002B32
+
 ******************************************/
 
 /**************************/
@@ -510,17 +515,23 @@ a:hover {
 }
 
 
+/****************************************************************************************/
+/*****************************               INDEX             **************************/
+/****************************************************************************************/
+
 /*****************/
 /*    Header     */
 /*****************/
 .header {
 	position: relative;
+	/* background-video: url(../images/header-desktop.mp4); */
+	overflow: hidden;
 }
 
 .header #video-background {
 	position: absolute;
-	right: 0;
-	bottom: 0;
+	left: 0;
+	top: 0;
 	min-width: 100%;
 	min-height: 100%;
 	width: auto;
@@ -529,11 +540,15 @@ a:hover {
 }
 
 .header .header-content {
-	padding-top: 11rem;
-	padding-bottom: 9rem;
+	height: 100vh;
+	/* padding-top: auto;
+	padding-bottom: auto; */
 	background: linear-gradient(rgba(21, 35, 63, 0.5), rgba(21, 35, 63, 0.5));
 	background-size: cover;
 	text-align: center; 
+	display: flex;
+	align-items:center;
+	
 }
 
 .header .h1-large {
@@ -621,6 +636,9 @@ a:hover {
 	margin-bottom: 0;
 }
 
+#file-signature{
+	margin-left: 11px;
+}
 
 /**********************/
 /*     Services 1     */
@@ -1044,6 +1062,15 @@ a:hover {
 	margin-bottom: 0.5rem;
 }
 
+
+
+
+
+/****************************************************************************************/
+/*****************************            NOSOTROS             **************************/
+/****************************************************************************************/
+
+
 /*********************/
 /*  Misión y visión  */
 /*********************/
@@ -1088,6 +1115,7 @@ a:hover {
 }
   
 #ls-part-1{
+	animation-delay: 0s;
 }
 
 #ls-part-2{
@@ -1109,9 +1137,97 @@ a:hover {
 #ls-part-6{
 	animation-delay: 12.5s;
 }
+/* End of experience */
 
 
 
+
+
+/****************************************************************************************/
+/*****************************              CONTACTO           **************************/
+/****************************************************************************************/
+
+/*************************/
+/*         Header        */
+/*************************/	
+.header-hero{
+	height: 70vh;
+	background-image: url(../images/header-contact-2.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position:left;
+}
+
+.hh-background{
+	background: linear-gradient(rgba(38, 31, 36, 0.5), rgba(38, 31, 36, 0.5));
+	height: 100%;
+	display: flex;
+	align-items: flex-end;
+	justify-content: center;
+}
+
+.header-hero h1{
+	margin-bottom: 4rem;
+}
+
+
+
+/*************************/
+/*         Frase         */
+/*************************/	
+.contact-phrase p{
+	margin-top: 90px;
+	margin-bottom: 90px;
+}
+
+
+/*************************/
+/*      ContacForm       */
+/*************************/	
+.form-2{	
+	padding-top: 9.25rem;
+	padding-bottom: 8.5rem;
+	background-color: #f7f9fd;
+	background-size: cover;
+	text-align: center;
+	justify-content: center;
+}
+
+/*************************/
+/*      Social Media     */
+/*************************/	
+.media-container{
+	margin-top: 90px;
+	margin-bottom: 90px;
+	text-align: center;
+}
+
+
+#facebook-inframe{
+	/* width: 340px;
+	height: 500px;
+	background-color: rgb(119, 33, 50); */
+	margin: 40px;
+}
+
+#instagram-inframe{
+	/* width: 340px;
+	height: 500px;
+	background-color: darkgoldenrod; */
+	margin: 40px;
+}
+
+
+
+
+
+
+
+
+
+/****************************************************************************************/
+/*****************************           MEDIA QUERIES         **************************/
+/****************************************************************************************/
 
 /*************************/
 /*     Media Queries     */
@@ -1409,12 +1525,6 @@ a:hover {
 		font-size: 1rem;
 	}
 	/* end of header */
-
-
-	/* Introduction */
-	/*.cards-1 .card {
-		width: 330px;
-	}*/
 
 	.cards-1 .card:nth-of-type(3n+2) {
 		margin-right: 3.625rem;
