--- a/css/styles.css
+++ b/css/styles.css
@@ -370,6 +370,10 @@ a:hover {
 	color: var(--buttons-icons);
 }
 
+.show{
+	display: flex;
+}
+
 .hide{
 	display: none;
 }
@@ -888,6 +892,28 @@ a:hover {
 	color: #efefef;
 }
 
+.form-advice{	
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 100;
+	height: 100vh;
+	width: 100vw;
+	/* display: flex; */
+	background-color: rgba(0, 0, 0, 0.25);
+	justify-content: center;
+	align-items: center;
+}
+
+.fa-container{
+	background-color: var(--heading-text);
+	width: 80vw;
+	height: auto;
+	padding: 2rem 1rem;
+	border-radius: 15px;
+	text-align: center;
+	border: solid 2px var(--buttons-icons);
+}
 
 /**********************/
 /*     Statistics     */
@@ -1009,6 +1035,16 @@ a:hover {
 	flex-direction: row-reverse;
 }
 
+/*********************/
+/*      Valores      */
+/*********************/
+/* #valores .h2-heading{
+	margin-bottom: 3rem;
+} */
+
+#valores .card{
+	background-color: transparent;
+}
 
 /*********************/
 /*     Experience    */
@@ -1512,6 +1548,14 @@ a:hover {
 		vertical-align: top;
 	}
 	/* end of projects */
+
+
+	/* Contact */	
+	.fa-container{
+		width: auto;
+		padding: 3rem 2.5rem;
+	}
+	/* end of contact */
 
 
 	/* Footer */
