--- a/css/styles.css
+++ b/css/styles.css
@@ -25,6 +25,8 @@ Table Of Contents:
 - Frase
 - Contactform
 - Social Media
+---------------- Propiedades --------------
+- State cards
 ------------------- Extra -----------------
 - Back To Top Button
 - Extra Pages
@@ -226,6 +228,7 @@ a:hover {
 	line-height: 0;
 	text-decoration: none;
 	transition: all 0.2s;
+	text-align: center;
 }
 
 .btn-solid-reg:hover {
@@ -246,6 +249,7 @@ a:hover {
 	line-height: 0;
 	text-decoration: none;
 	transition: all 0.2s;
+	text-align: center
 }
 
 .btn-solid-lg:hover {
@@ -266,6 +270,7 @@ a:hover {
 	line-height: 0;
 	text-decoration: none;
 	transition: all 0.2s;
+	text-align: center
 }
 
 .btn-outline-reg:hover {
@@ -286,6 +291,7 @@ a:hover {
 	line-height: 0;
 	text-decoration: none;
 	transition: all 0.2s;
+	text-align: center
 }
 
 .btn-outline-lg:hover {
@@ -306,6 +312,7 @@ a:hover {
 	line-height: 0;
 	text-decoration: none;
 	transition: all 0.2s;
+	text-align: center
 }
 
 .btn-outline-sm:hover {
@@ -446,14 +453,14 @@ a:hover {
 	transition: all 0.2s ease;
 }
 
-.top-nav-no-collapse .nav-item.dropdown.show .nav-link,
+.top-nav-no-collapse .nav-item .dropdown.show .nav-link,
 .top-nav-no-collapse .nav-item .nav-link:hover,
 .top-nav-no-collapse .nav-item .nav-link.active {
-	color: var(--buttons-icons);
+	color: var(--heading-text);
 }
 
 /* Light version */
-.top-nav-collapse .nav-item .nav-link {
+.nav-item .nav-link {
 	padding-top: 0.625rem;
 	padding-bottom: 0.625rem;
 	color: var(--buttons-icons);
@@ -461,9 +468,9 @@ a:hover {
 	transition: all 0.2s ease;
 }
 
-.top-nav-collapse .nav-item.dropdown.show .nav-link,
-.top-nav-collapse .nav-item .nav-link:hover,
-.top-nav-collapse .nav-item .nav-link.active {
+.nav-item.dropdown.show .nav-link,
+.nav-item .nav-link:hover,
+.nav-item .nav-link.active {
 	color: var(--heading-text);
 }
 
@@ -474,7 +481,7 @@ a:hover {
 
 @keyframes fadeDropdown {
     0% {
-        opacity: 0;
+        opacity: 1;
     }
 
     100% {
@@ -530,19 +537,19 @@ a:hover {
 }
 
 /* Dark version */
-.top-nav-no-collapse .fa-stack:hover .fa-stack-2x {
+/* .top-nav-no-collapse .fa-stack:hover .fa-stack-2x {
 	color: #ffffff;
 }
 
 .top-nav-no-collapse .fa-stack:hover .fa-stack-1x {
 	color: var(--buttons-icons);
-}
+} */
 /* Light version */
-.top-nav-collapse .fa-stack:hover .fa-stack-2x {
+.fa-stack:hover .fa-stack-2x {
 	color: var(--heading-text);
 }
 
-.top-nav-collapse .fa-stack:hover .fa-stack-1x {
+.fa-stack:hover .fa-stack-1x {
 	color: var(--backgroud);
 }
 
@@ -579,14 +586,16 @@ a:hover {
 
 .header .header-content {
 	height: 100vh;
-	/* padding-top: auto;
-	padding-bottom: auto; */
-	background: linear-gradient(rgba(21, 35, 63, 0.5), rgba(21, 35, 63, 0.5));
+	/* background: linear-gradient(0deg, rgba(21,35,63,0.5) 70%, rgba(206,213,228,0.7) 100%);  */
+	/* background: -moz-linear-gradient(top,  rgba(255,255,255,0.5) 10%, rgba(0,0,0,0.5) 20%);
+	background: -webkit-linear-gradient(top,  rgba(255,255,255,0.5) 10%,rgba(0,0,0,0.5) 20%); */
+	background: linear-gradient(to bottom, rgba(206,213,228,0.6) 10%,rgba(44, 47, 51, 0.6)  45%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#80ffffff', endColorstr='#80000000',GradientType=0 );
+
 	background-size: cover;
 	text-align: center; 
 	display: flex;
 	align-items:center;
-	
 }
 
 .header .h1-large {
@@ -600,8 +609,17 @@ a:hover {
 /************************/
 /*     Introduction     */
 /************************/
+#Introduction-phrase{
+	padding: 3rem 0;
+	text-align: center;
+	background-color: var(--buttons-icons);
+}
+#Introduction-phrase h1{
+	color: #fff;
+}
+
 .cards-1 {
-	padding-top: 9.125rem;
+	padding-top: 6.125rem;
 	padding-bottom: 5.25rem;
 	text-align: center;
 }
@@ -1209,9 +1227,50 @@ a:hover {
 }
 
 
+/****************************************************************************************/
+/*****************************            Propiedades          **************************/
+/****************************************************************************************/
 
+/******************************/
+/*     State     */
+/******************************/
 
+#state-cards{
+	padding-top: 100px;
+	padding-bottom: 100px;
+}
 
+.cards-container{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+}
+
+#state-cards .card{
+	margin: 2rem 1rem;
+}
+
+#state-cards .btn-solid-reg{
+	width: 100%;
+}
+
+.card-img-top{
+	/* height: 100px;
+	width: auto; */
+}
+
+.seleccionado{
+	display: none;
+}
+
+/*______________ PROVICIONAL _______________*/
+#projects h4{
+	text-align: left;
+}
+
+#projects .btn-solid-reg{
+	width: 100%;
+}
 
 
 /****************************************************************************************/
@@ -1417,6 +1476,7 @@ a:hover {
 	.navbar {
 		padding-top: 1.75rem;
 		background-color: transparent;
+		/* background-color: rgba(255, 255, 255, 1); */
 		box-shadow: none;
 		transition: all 0.2s;
 	}
@@ -1447,12 +1507,17 @@ a:hover {
 	}
 
 	.navbar .logo-image img {
-		height: 65px;
+		height: 120px;
 	}
 	
 	.navbar .navbar-nav {
 		margin-top: 0;
 		margin-bottom: 0;
+		border-radius: 10px;
+	}
+
+	.bg-green{
+		background-color: var(--buttons-icons);
 	}
 	
 	.navbar .nav-item .nav-link {
@@ -1515,7 +1580,7 @@ a:hover {
 
 	/* Details */
 	.split {
-		height: 786px;
+		height: 530px;
 	}
 	
 	.split .area-1 {
@@ -1671,7 +1736,7 @@ a:hover {
 
 	/* Details */
 	.split {
-		height: 708px;
+		height: 530px;
 	}
 
 	.split .text-container {
