--- a/css/styles.css
+++ b/css/styles.css
@@ -49,29 +49,26 @@ Colors:
 /*      Custom Fonts      */
 /**************************/
 @font-face {
-	font-family: ViceCitySans;
+	font-family: "ViceCitySans";
 	src: url(../webfonts/ViceCitySans.otf);
 	font-style: normal;
 	font-weight: normal;
 }
 
 @font-face {
-	font-family: CaviarDreams;
-	src: url(../webfonts/CaviarDreams.ttf);
-	/* font-style: normal;
-	font-weight: normal; */
-}
-
-@font-face {
-	font-family: CaviarDreams;
-	src: url(../webfonts/Caviar\ Dreams\ Bold.ttf);
-	font-weight: bold;
-}
-
-@font-face {
-	font-family: CaviarDreams;
+	font-family: "CaviarDreams";
 	src: url(../webfonts/CaviarDreams_Italic.ttf);
 	font-style: italic;
+}
+@font-face {
+	font-family: "CaviarDreams";
+    src: url(../webfonts/Caviar\ Dreams\ Bold.ttf);
+    font-weight: bold;
+}
+@font-face {
+	font-family: "CaviarDreams";
+	src: url(../webfonts/CaviarDreams.ttf);
+	font-weight: normal;
 }
 
 
@@ -90,7 +87,6 @@ Colors:
 /**************************/
 /*     General Styles     */
 /**************************/
-
 body,
 html {
     width: 100%;
@@ -99,7 +95,9 @@ html {
 
 body, p {
 	color: var(--body-text); 
-	font: 600 1rem/1.625rem "CaviarDreams", sans-serif;
+	font: 600 1rem/1.625rem "CaviarDreams", arial;
+	/* font-family: "CaviarDreams", arial;
+	font-size: 1rem; */
 }
 
 h1 {
@@ -704,6 +702,14 @@ a:hover {
 }
 
 /**********************/
+/*       Services     */
+/**********************/
+#services p{
+	text-align: justify;
+}
+
+
+/**********************/
 /*     Services 1     */
 /**********************/
 .basic-1 {
@@ -1273,6 +1279,21 @@ a:hover {
 	width: 100%;
 }
 
+#projects .direccion-card{
+	line-height: 1.2rem;
+	margin-bottom: 8px;
+	font-style: italic;
+}
+
+#projects .precio-card{
+	font-weight: bold;
+	font-size: 1.2rem;
+}
+
+#projects .info-card{
+	text-align: justify;
+}
+
 
 /******************************/
 /*         Form PopUp         */
@@ -1350,11 +1371,11 @@ a:hover {
 #myBtn {
 	position: fixed; 
   	z-index: 99; 
-	bottom: 20px; 
-	right: 20px; 
+	bottom: 24px; 
+	right: 100px; 
 	display: none; 
-	width: 52px;
-	height: 52px;
+	width: 60px;
+	height: 60px;
 	border: none; 
 	border-radius: 50%; 
 	outline: none; 
@@ -1368,8 +1389,8 @@ a:hover {
 
 #myBtn img {
 	margin-bottom: 0.25rem;
-	margin-left: 0.125rem;
-	width: 18px;
+	/* margin-left: 0.125rem; */
+	width: 25px;
 }
 
 
